# example-standalone-inferencing-himax

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.gnu  README.md  hx_drv_tflm.h  main.cc  make-image.sh  memory.lcf  memory.x  toolchain.gnu.cmake
edge-impulse-sdk/: create-arduino-library.sh
edge-impulse-sdk/classifier/: ei_aligned_malloc.h  ei_classifier_config.h  ei_run_classifier.h  ei_run_dsp.h
edge-impulse-sdk/dsp/speechpy/: feature.hpp
edge-impulse-sdk/porting/himax/: ei_classifier_porting.cpp
edge-impulse-sdk/tensorflow/lite/micro/: all_ops_resolver.cc  micro_mutable_op_resolver.h
edge-impulse-sdk/tensorflow/lite/micro/kernels/: conv.cc  depthwise_conv.cc  detection_postprocess.cc  fully_connected.cc  pooling.cc
edge-impulse-sdk/tensorflow/lite/micro/kernels/arc_mli/: conv.cc  depthwise_conv.cc  fully_connected.cc  scratch_buffers.cc
image_gen_linux_v3/: out.img
model-parameters/: dsp_blocks.h  model_metadata.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
